src/objects/DBLicenseContactTransaction__c.object
<CustomObject>
    <fields>
        <fullName>AccMgrUsr__c</fullName>
        <label>AccMgrUsr</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBLicense__c</fullName>
        <label>DBLicense</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepUsr__c</fullName>
        <label>SalesRepUsr</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>DBLicenseContactTransaction</label>
    <nameField>
        <label>DBLicenseContactTransaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DBLicenseContactTransactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>